Removed the use of deprecated Java elements by the application code